# rpi-mmal-opencv-modetect-mjpeg

./: CMakeLists.txt  README.md  errorlog.txt  mmal_jpeg.c  mmal_mjpeg.c  opencv_modect.c
